# NovaEngine

./: CMakeLists.txt  LICENSE.md  README.md
include/NovaEngine/: Allocator.h  Camera.h  CameraManager.h  Clock.h  DirectedAcyclicGraph.h  Engine.h  FrameGraph.h  FreeCam.h  FreeListAllocator.h  GenericAllocator.h  IAllocator.h  IGenericAllocator.h  IRawAllocator.h  IResourceAllocator.h  ISystem.h  Input.h  LinearAllocator.h  Memory.h  Mesh.h  NovaEngine.h  PerspectiveCamera.h  QueueGraph.h  RawAllocator.h  RenderGraph.h  Renderer.h  ResourceAllocator.h  Signal.h  SlotMap.h  StackAllocator.h  StagingAllocator.h  Texture.h  TransferNode.h  Window.h
src/: Allocator.cpp  Camera.cpp  CameraManager.cpp  Clock.cpp  Engine.cpp  FrameGraph.cpp  FreeCam.cpp  FreeListAllocator.cpp  GenericAllocator.cpp  IAllocator.cpp  IGenericAllocator.cpp  IRawAllocator.cpp  IResourceAllocator.cpp  Input.cpp  LinearAllocator.cpp  Memory.cpp  Mesh.cpp  PerspectiveCamera.cpp  QueueGraph.cpp  RawAllocator.cpp  RenderGraph.cpp  Renderer.cpp  ResourceAllocator.cpp  StackAllocator.cpp  StagingAllocator.cpp  Texture.cpp  TransferNode.cpp  Window.cpp
test/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
